--- a/test/1CC8/DEE.cfg
+++ b/test/1CC8/DEE.cfg
@@ -15,4 +15,4 @@ resAllowed0_3 Glu Ala Gly
 resAllowed0_4 Ala Gly
 resAllowed0_5 Gln Ala Gly
 resAllowed0_6 Leu Ala Gly
-OutputGMECStruct true
+OutputGMECStruct true
