--- a/test/1CC8_test/DEE.cfg
+++ b/test/1CC8_test/DEE.cfg
@@ -16,4 +16,4 @@ resAllowed0_4 Ala Gly
 resAllowed0_5 Gln Ala Gly
 resAllowed0_6 Leu Ala Gly
 OutputGMECStruct true
-useEllipses true
+useEllipses false
