--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,8 +3,8 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=ProposedRefactor
-application.vendor=mhall44
+application.title=OSPREY_refactor_v2
+application.vendor=hmn5
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -15,15 +15,18 @@ build.generated.sources.dir=${build.dir}/generated-sources
 build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
+buildfile=nbbuild.xml
 # Uncomment to specify the preferred debugger connection transport:
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
 debug.test.classpath=\
     ${run.test.classpath}
+# Files in build.classes.dir which should be excluded from distribution jar
+dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ProposedRefactor.jar
+dist.jar=${dist.dir}/OSPREY_refactor_v2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
@@ -36,12 +39,12 @@ file.reference.commons-io-1.4.jar=lib/commons-io-1.4.jar
 file.reference.commons-lang-2.5.jar=lib/commons-lang-2.5.jar
 file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
 file.reference.commons-math3-3.0.jar=lib/commons-math3-3.0.jar
-file.reference.commons-math3-3.3.jar=lib/commons-math3-3.3.jar
+file.reference.gurobi.jar=lib/gurobi.jar
 file.reference.jdepend-2.9.1.jar=lib/jdepend-2.9.1.jar
 file.reference.joptimizer.jar=lib/joptimizer.jar
 file.reference.junit-3.8.1.jar=lib/junit-3.8.1.jar
 file.reference.log4j-1.2.14.jar=lib/log4j-1.2.14.jar
-file.reference.ojalgo-35.0.jar=lib/ojalgo-35.0.jar
+file.reference.OSPREY_refactor_v2-src=src
 file.reference.xml-apis-1.0.b2.jar=lib/xml-apis-1.0.b2.jar
 includes=**
 jar.compress=false
@@ -55,12 +58,11 @@ javac.classpath=\
     ${file.reference.commons-lang-2.5.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.commons-math3-3.0.jar}:\
-    ${file.reference.commons-math3-3.3.jar}:\
+    ${file.reference.gurobi.jar}:\
     ${file.reference.jdepend-2.9.1.jar}:\
     ${file.reference.joptimizer.jar}:\
     ${file.reference.junit-3.8.1.jar}:\
     ${file.reference.log4j-1.2.14.jar}:\
-    ${file.reference.ojalgo-35.0.jar}:\
     ${file.reference.xml-apis-1.0.b2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -85,11 +87,11 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=edu.duke.cs.osprey.control.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -101,5 +103,4 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+src.dir=${file.reference.OSPREY_refactor_v2-src}
