Dunbrack rotamer library support

--- a/test/1CC8/DEE.cfg
+++ b/test/1CC8/DEE.cfg
@@ -3,9 +3,9 @@
 %
 runName 1CC8
 algOption 3
-imindee true
+imindee false
 ival 5
-doMinimize true
+doMinimize false
 useEref false
 addWT false
 addWTRots false
@@ -17,5 +17,5 @@ resAllowed0_4 Ala Gly
 resAllowed0_5 Gln Ala Gly
 resAllowed0_6 Leu Ala Gly
 OutputGMECStruct true
-UseTupExp true
-UseEPIC true
+UseTupExp false 
+UseEPIC false
