--- a/test/4HEM/DEE.cfg
+++ b/test/4HEM/DEE.cfg
@@ -3,7 +3,8 @@ ival 4
 useEref false
 addWT true
 addWTRots false
-useDunbrackRotamers true
+useDunbrackRotamers false
+OUTPUTGMECSTRUCT true
 stericThresh 1000000
 resAllowed0_0 
 resAllowed0_1 
