Testing Upper and Lower Bounds

--- a/test/Entropy/04-designedAntibodies/4LAJ_jm4/DEE_old.cfg
+++ b/test/Entropy/04-designedAntibodies/4LAJ_jm4/DEE_old.cfg
@@ -1,8 +1,7 @@
-runName D01
+runName 4LAJ
 useEref false 
 addWT true 
 addWTRots true 
-useDunbrackRotamers false
 resAllowed0_0 
 resAllowed0_1 
 resAllowed0_2 
@@ -37,4 +36,3 @@ resAllowed1_15
 resAllowed1_16 
 resAllowed1_17 
 resAllowed1_18 
-
