--- a/test/Entropy/04-designedAntibodies/D01-1F4X_maximally_reverted/DEE_old.cfg
+++ b/test/Entropy/04-designedAntibodies/D01-1F4X_maximally_reverted/DEE_old.cfg
@@ -1,7 +1,8 @@
-runName D02
+runName D01
 useEref false 
 addWT true 
 addWTRots true 
+useDunbrackRotamers false
 resAllowed0_0 ALA
 resAllowed0_1 ALA
 resAllowed0_2 ALA
