--- a/test/Entropy/04-designedAntibodies/D10-1NMA_hb/DEE.cfg
+++ b/test/Entropy/04-designedAntibodies/D10-1NMA_hb/DEE.cfg
@@ -2,34 +2,34 @@ runName D10
 useEref false 
 addWT true 
 addWTRots true 
-resAllowed0_0 
-resAllowed0_1 
-resAllowed0_2 
-resAllowed0_3 
-resAllowed0_4 
-resAllowed0_5 
-resAllowed0_6 
-resAllowed0_7 
-resAllowed0_8 
-resAllowed0_9 
-resAllowed0_10 
-resAllowed0_11 
-resAllowed0_12 
-resAllowed0_13 
-resAllowed0_14 
-resAllowed0_15 
-resAllowed0_16 
-resAllowed1_0 
-resAllowed1_1 
-resAllowed1_2 
-resAllowed1_3 
-resAllowed1_4 
-resAllowed1_5 
-resAllowed1_6 
-resAllowed1_7 
-resAllowed1_8 
-resAllowed1_9 
-resAllowed1_10 
-resAllowed1_11 
-resAllowed1_12 
-resAllowed1_13 
+resAllowed0_0 ALA
+resAllowed0_1 ALA
+resAllowed0_2 ALA
+resAllowed0_3 ALA
+resAllowed0_4 ALA
+resAllowed0_5 ALA
+resAllowed0_6 ALA
+resAllowed0_7 ALA
+resAllowed0_8 ALA
+resAllowed0_9 ALA
+resAllowed0_10 ALA
+resAllowed0_11 ALA
+resAllowed0_12 ALA
+resAllowed0_13 ALA
+resAllowed0_14 ALA
+resAllowed0_15 ALA
+resAllowed0_16 ALA
+resAllowed1_0 ALA
+resAllowed1_1 ALA
+resAllowed1_2 ALA
+resAllowed1_3 ALA
+resAllowed1_4 ALA
+resAllowed1_5 ALA
+resAllowed1_6 ALA
+resAllowed1_7 ALA
+resAllowed1_8 ALA
+resAllowed1_9 ALA
+resAllowed1_10 ALA
+resAllowed1_11 ALA
+resAllowed1_12 ALA
+resAllowed1_13 ALA
