--- a/test/4HEM/System.cfg
+++ b/test/4HEM/System.cfg
@@ -1,4 +1,4 @@
-pdbname /usr/project/dlab/Users/pablo/Entropy/02b-nanobodies/4HEM/01-structures/04-4HEM_clean.min_renumber.pdb
+pdbname 04-4HEM_clean.min_renumber_F647A.pdb
 numOfStrands 2
 strand0 34 463
 strand1 601 722
