--- a/test/Entropy/04-designedAntibodies/D02-1F4X_maximally_reverted_val631/DEE_old.cfg
+++ b/test/Entropy/04-designedAntibodies/D02-1F4X_maximally_reverted_val631/DEE_old.cfg
@@ -1,8 +1,7 @@
-runName D01
+runName D02
 useEref false 
 addWT true 
 addWTRots true 
-useDunbrackRotamers false
 resAllowed0_0 
 resAllowed0_1 
 resAllowed0_2 
@@ -18,6 +17,7 @@ resAllowed0_11
 resAllowed0_12 
 resAllowed0_13 
 resAllowed0_14 
+resAllowed0_15 
 resAllowed1_0 
 resAllowed1_1 
 resAllowed1_2 
@@ -37,4 +37,5 @@ resAllowed1_15
 resAllowed1_16 
 resAllowed1_17 
 resAllowed1_18 
-
+resAllowed1_19 
+resAllowed1_20 
