Supporting reference energies

--- a/nbproject/private/configs/2O9S.properties
+++ b/nbproject/private/configs/2O9S.properties
@@ -1,2 +1,2 @@
-application.args=-c KStar.cfg findGMEC System.cfg DEE.cfg
+application.args=-c KStar.cfg findGMEC System.2O9S.cfg DEE.2O9S.I0.cfg
 work.dir=/Users/mhall44/Mark/OSPREY_refactor/test/2O9S
