KaDEE with COMETS

--- a/test/4HEM/DEE.cfg
+++ b/test/4HEM/DEE.cfg
@@ -1,42 +1,22 @@
 runName 4HEM
-<<<<<<< HEAD
+ival 4
 useEref false
 addWT true
+addWTRots false
+stericThresh 100
+useDunbrackRotamers true
 resAllowed0_0 
 resAllowed0_1 
 resAllowed0_2 
 resAllowed0_3 
 resAllowed0_4 
 resAllowed0_5 
-resAllowed1_0 
-resAllowed1_1 
-resAllowed1_2 
-resAllowed1_3 
-resAllowed1_4 
-resAllowed1_5 
-resAllowed1_6 
-resAllowed1_7 
-resAllowed1_8 
-=======
-ival 4
-useEref false
-addWT true
-addWTRots true
-stericThresh 1000000
-useDunbrackRotamers true
-resAllowed0_0 GLY
-resAllowed0_1 GLY
-resAllowed0_2 GLY
-resAllowed0_3 GLY
-resAllowed0_4 GLY
-resAllowed0_5 GLY
-resAllowed1_0 GLY
-resAllowed1_1 GLY
-resAllowed1_2 GLY
-resAllowed1_3 GLY
-resAllowed1_4 GLY
-resAllowed1_5 GLY
-resAllowed1_6 GLY
-resAllowed1_7 GLY
-resAllowed1_8 GLY
->>>>>>> master
+resAllowed1_0 ALA VAL LEU PHE ARG LYS
+resAllowed1_1 ALA VAL LEU PHE ARG LYS
+resAllowed1_2 ALA VAL LEU PHE ARG LYS
+resAllowed1_3 ALA VAL LEU PHE ARG LYS
+resAllowed1_4 ALA VAL LEU PHE ARG LYS
+resAllowed1_5 ALA VAL LEU PHE ARG LYS
+resAllowed1_6 ALA VAL LEU PHE ARG LYS
+resAllowed1_7 ALA VAL LEU PHE ARG LYS
+resAllowed1_8 ALA VAL LEU PHE ARG LYS
