--- a/test/4HEM/System.cfg
+++ b/test/4HEM/System.cfg
@@ -1,12 +1,9 @@
-<<<<<<< HEAD
-pdbname 04-4HEM_clean.min_renumber_F647A.pdb
-=======
 pdbname /usr/project/dlab/Users/pablo/Entropy/02b-nanobodies/4HEM/01-structures/04-4HEM_clean.min_renumber.pdb
->>>>>>> master
 numOfStrands 2
 strand0 34 463
 strand1 601 722
 strandMutNums 6 9
+mutableStrand 1
 strandrottrans0 false
 strandrottrans1 false
 strandmut0 101 116 117 118 143 366
