Refactored MPLP to handle intra and pairwise energies with original emat

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,5 +4,5 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/hunternisonoff/Library/Application Support/NetBeans/8.0.2/build.properties
+user.properties.file=/home/home3/hmn5/.netbeans/8.0.2/build.properties
 work.dir=/Users/hunternisonoff/Projects/DonaldLab/Code/OSPREY_refactor/test/4HEM_KaDEE/Test
