--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,8 +3,8 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=OSPREY_refactor
-application.vendor=hunternisonoff
+application.title=OSPREY_refactor_v2
+application.vendor=hmn5
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,7 +25,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=nbdist
-dist.jar=${dist.dir}/OSPREY_refactor.jar
+dist.jar=${dist.dir}/OSPREY_refactor_v2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
@@ -38,14 +38,12 @@ file.reference.commons-io-1.4.jar=lib/commons-io-1.4.jar
 file.reference.commons-lang-2.5.jar=lib/commons-lang-2.5.jar
 file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
 file.reference.commons-math3-3.0.jar=lib/commons-math3-3.0.jar
-file.reference.commons-math3-3.3.jar=lib/commons-math3-3.3.jar
 file.reference.gurobi.jar=lib/gurobi.jar
 file.reference.jdepend-2.9.1.jar=lib/jdepend-2.9.1.jar
 file.reference.joptimizer.jar=lib/joptimizer.jar
 file.reference.junit-3.8.1.jar=lib/junit-3.8.1.jar
 file.reference.log4j-1.2.14.jar=lib/log4j-1.2.14.jar
-file.reference.ojalgo-35.0.jar=lib/ojalgo-35.0.jar
-file.reference.OSPREY_refactor-src=src
+file.reference.OSPREY_refactor_v2-src=src
 file.reference.xml-apis-1.0.b2.jar=lib/xml-apis-1.0.b2.jar
 includes=**
 jar.compress=false
@@ -59,13 +57,11 @@ javac.classpath=\
     ${file.reference.commons-lang-2.5.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.commons-math3-3.0.jar}:\
-    ${file.reference.commons-math3-3.3.jar}:\
     ${file.reference.gurobi.jar}:\
     ${file.reference.jdepend-2.9.1.jar}:\
     ${file.reference.joptimizer.jar}:\
     ${file.reference.junit-3.8.1.jar}:\
     ${file.reference.log4j-1.2.14.jar}:\
-    ${file.reference.ojalgo-35.0.jar}:\
     ${file.reference.xml-apis-1.0.b2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -90,7 +86,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=edu.duke.cs.osprey.control.Main
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -106,4 +102,4 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.dir=${file.reference.OSPREY_refactor-src}
+src.dir=${file.reference.OSPREY_refactor_v2-src}
