Changes before SF Trip

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -47,7 +47,7 @@ onlyStartingPerturbations false
 maxShearParam 2.5
 maxBackrubParam 2.5
 selectLCAs false
-
+perturbationFile none
 
 %COMETS
 NUMSTATES -1
