moved some defaults to defaults.cfg

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -1,4 +1,10 @@
-eEvalThreads 4
+%KSTAR
+pFuncQCap 131072
+pFuncMethod 1npcpmcache
+pFuncThreads 4
+numThreads 24
+eMinMethod hbfgsccd
+KStarMethod linear
 
 Ew 0
 imindee false
