small bug fixes for k*

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -1,7 +1,8 @@
 %KSTAR
-pFuncQCap 131072
+pFuncQWait false
+pFuncQCap 256000
 pFuncMethod 1npcpmcache
-pFuncThreads 4
+pFuncThreads 24
 numThreads 24
 eMinMethod hbfgsccd
 KStarMethod linear
