preparations for kustar

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -1,9 +1,9 @@
 %KSTAR
 pFuncQWait false
-pFuncQCap 256000
+pFuncQCap 1024000
 pFuncMethod 1npcpmcache
-pFuncThreads 12
-numThreads 12
+pFuncThreads 8
+numThreads 8
 eMinMethod hbfgsccd
 KStarMethod linear
 ematDir emat
