added keyword for delete ematdir

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -1,12 +1,13 @@
 %KSTAR
 pFuncQWait false
-pFuncQCap 1024000
+pFuncQCap 2048000
 pFuncMethod 1npcpmcache
 pFuncThreads 8
 numThreads 8
 eMinMethod hbfgsccd
 KStarMethod linear
 ematDir emat
+deleteEmatDir false
 
 Ew 0
 imindee false
