added k* test case

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -4,7 +4,7 @@ pFuncQCap 2048000
 pFuncMethod 1npcpmcache
 pFuncThreads 8
 numThreads 8
-eMinMethod hbfgsccd
+eMinMethod ccd
 KStarMethod linear
 ematDir emat
 deleteEmatDir false
