removed addwt from single sequence search problem creation

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -1,6 +1,7 @@
 %KSTAR
+pFuncStabilityThreshold 0.1
 pFuncQWait false
-pFuncQCap 2048000
+pFuncQCap 2097152
 pFuncMethod 1npcpmcache
 pFuncThreads 8
 numThreads 8
