--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -1,7 +1,8 @@
 %KSTAR
-pFuncStabilityThreshold 0.1
+pFuncUseRigEUB false
+pFuncStabilityThreshold 0.0001
 pFuncQWait false
-pFuncQCap 2097152
+pFuncQCap 4194304
 pFuncMethod 1npcpmcache
 pFuncThreads 16
 numThreads 16
