changed test cases

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -8,6 +8,8 @@ pFuncThreads 16
 numThreads 16
 eMinMethod ccd
 KStarMethod linear
+doKStarCheckpoint false
+checkpointInterval 100000
 ematDir emat
 deleteEmatDir false
 
