--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -1,6 +1,6 @@
 %KSTAR
 pFuncUseRigEUB false
-pFuncStabilityThreshold 0.0001
+pFuncStabThresh 0.00001
 pFuncQWait false
 pFuncQCap 4194304
 pFuncMethod 1npcpmcache
