--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -1,12 +1,13 @@
 %KSTAR
 pFuncUseRigEUB false
-pFuncStabThresh 0.00001
+pFuncStabThresh 0
 pFuncQWait false
 pFuncQCap 4194304
 pFuncMethod 1npcpmcache
 pFuncThreads 16
 numThreads 16
 eMinMethod ccd
+KStarRefinePruning false
 KStarMethod linear
 doKStarCheckpoint false
 checkpointInterval 100000
