keep these defaults for test

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -1,7 +1,7 @@
 %KSTAR
 pFuncStabThresh 0
 pFuncQWait false
-pFuncQCap 4194304
+pFuncQCap 256000
 pFuncMethod 1npcpmcache
 pFuncThreads 16
 numThreads 16
