--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -2,7 +2,7 @@
 pFuncStabThresh 0
 pFuncQWait false
 pFuncQCap 256000
-pFuncMethod 1npcpmcache
+pFuncMethod new02
 pFuncThreads 16
 numThreads 16
 eMinMethod ccd
