First TRBP Attempt - Numerical Issues

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -5,7 +5,7 @@ imindee false
 Ival 5
 doMinimize false
 UseTupExp false
-UseEPIC false
+ls false
 CheckApproxE true
 OUTPUTGMECSTRUCT false
 useEllipses false
@@ -60,6 +60,7 @@ COMETSIVal NaN
 
 
 %EPIC
+USEEPIC false
 EPICTHRESH1 10
 EPICTHRESH2 25
 EPICGOALRESID 0.0001
