--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=OSPREY_refactor_v2
+application.vendor=hmn5
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -14,7 +15,6 @@ build.generated.sources.dir=${build.dir}/generated-sources
 build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
-buildfile=nbbuild.xml
 # Uncomment to specify the preferred debugger connection transport:
 #debug.transport=dt_socket
 debug.classpath=\
@@ -24,9 +24,10 @@ debug.test.classpath=\
 # Files in build.classes.dir which should be excluded from distribution jar
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
-dist.dir=dist
+dist.dir=nbdist
 dist.jar=${dist.dir}/OSPREY_refactor_v2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.architecture-rules-3.0.0-M1.jar=lib/architecture-rules-3.0.0-M1.jar
 file.reference.colt-1.2.0.jar=lib/colt-1.2.0.jar
@@ -39,14 +40,14 @@ file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
 file.reference.commons-math3-3.0.jar=lib/commons-math3-3.0.jar
 file.reference.commons-math3-3.3.jar=lib/commons-math3-3.3.jar
 file.reference.gurobi.jar=lib/gurobi.jar
+file.reference.Jama-1.0.3.jar=lib/Jama-1.0.3.jar
 file.reference.jdepend-2.9.1.jar=lib/jdepend-2.9.1.jar
 file.reference.joptimizer.jar=lib/joptimizer.jar
 file.reference.junit-3.8.1.jar=lib/junit-3.8.1.jar
 file.reference.junit-4.12.jar=lib/junit-4.12.jar
+file.reference.lib-CopyLibs=lib/CopyLibs/
 file.reference.log4j-1.2.14.jar=lib/log4j-1.2.14.jar
-file.reference.ojalgo-35.0.jar=lib/ojalgo-35.0.jar
-file.reference.OSPREY_refactor-src=src
-file.reference.OSPREY_refactor-test=test
+file.reference.OSPREY_refactor_v2-src=src
 file.reference.xml-apis-1.0.b2.jar=lib/xml-apis-1.0.b2.jar
 includes=**
 jar.compress=false
@@ -60,28 +61,26 @@ javac.classpath=\
     ${file.reference.commons-lang-2.5.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.commons-math3-3.0.jar}:\
-    ${file.reference.commons-math3-3.3.jar}:\
     ${file.reference.gurobi.jar}:\
     ${file.reference.jdepend-2.9.1.jar}:\
     ${file.reference.joptimizer.jar}:\
     ${file.reference.junit-3.8.1.jar}:\
-    ${file.reference.junit-4.12.jar}:\
     ${file.reference.log4j-1.2.14.jar}:\
-    ${file.reference.ojalgo-35.0.jar}:\
-    ${file.reference.xml-apis-1.0.b2.jar}
+    ${file.reference.xml-apis-1.0.b2.jar}:\
+    ${file.reference.lib-CopyLibs}:\
+    ${file.reference.commons-math3-3.3.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.Jama-1.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.external.vm=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
+    ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -95,7 +94,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=edu.duke.cs.osprey.control.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -111,5 +110,4 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.dir=${file.reference.OSPREY_refactor-src}
-test.src.dir=${file.reference.OSPREY_refactor-test}
+src.dir=${file.reference.OSPREY_refactor_v2-src}
