Updated work on refactored TRBP

--- a/nbproject/genfiles.properties
+++ b/nbproject/genfiles.properties
@@ -1,3 +1,6 @@
+build.xml.data.CRC32=b531e4cd
+build.xml.script.CRC32=5a900c3d
+build.xml.stylesheet.CRC32=8064a381@1.75.2.48
 nbbuild.xml.data.CRC32=b531e4cd
 nbbuild.xml.script.CRC32=5a900c3d
 nbbuild.xml.stylesheet.CRC32=8064a381@1.79.1.48
