implement addWTRots config option
also updated EnergyCalculator to use wt rots instead of diabling conformational normalization
add a few convenience methods in various places too
residues have a copy constructor now too

basically, this change adds a template instance to the RC class. that way a RC can include unique residue templates instead of just moving dihedrals in library templates.

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -4,7 +4,6 @@ Ew 0
 imindee false
 Ival 5
 doMinimize false
-standardizeConformation true
 UseTupExp false
 UseEPIC false
 CheckApproxE true
@@ -12,6 +11,7 @@ OUTPUTGMECSTRUCT false
 useEllipses false
 UsePoissonBoltzmann false
 ADDWT true
+addWTRots false
 UseERef false
 AddResEntropy false
 TypeDep false
