TRBP_Test added

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -110,4 +110,4 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.dir=${file.reference.OSPREY_refactor_v2-src}
+src.src.dir=src
