Deleted Useless Classes

--- a/test/4HEM/PartFuncTest/DEE.cfg
+++ b/test/4HEM/PartFuncTest/DEE.cfg
@@ -1,7 +1,7 @@
 runName 4HEM
 addWTrots true
 addWT true
-useDunbrackRotamers true
+useDunbrackRotamers false
 stericThresh 100
 algoption 1
 resAllowed0_0 ASN
