Fixed bug in deciding if higher-order energy terms are needed
Also set COMETS example (3K75.3LQC) to not use wild-type rotamers (I
had addWTRots=true earlier, but we didn’t actually have WT rots
implemented, and once Jeff added them no sequences are returned haha)

--- a/test/3K75.3LQC/DEE.3K75.b.cfg
+++ b/test/3K75.3LQC/DEE.3K75.b.cfg
@@ -12,7 +12,7 @@ stericE 100000000000.0
 pairSt 100000000000.0
 useEref true
 addWT true
-addWTRots true
+addWTRots false
 resAllowed0_0 
 resAllowed0_1 
 resAllowed0_2 
