--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,9 +37,9 @@ file.reference.commons-lang-2.5.jar=lib/commons-lang-2.5.jar
 file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
 file.reference.commons-math3-3.0.jar=lib/commons-math3-3.0.jar
 file.reference.commons-math3-3.3.jar=lib/commons-math3-3.3.jar
+file.reference.hamcrest-all-1.3.jar=lib/hamcrest-all-1.3.jar
 file.reference.jdepend-2.9.1.jar=lib/jdepend-2.9.1.jar
 file.reference.joptimizer.jar=lib/joptimizer.jar
-file.reference.junit-3.8.1.jar=lib/junit-3.8.1.jar
 file.reference.junit-4.12.jar=lib/junit-4.12.jar
 file.reference.log4j-1.2.14.jar=lib/log4j-1.2.14.jar
 file.reference.ojalgo-35.0.jar=lib/ojalgo-35.0.jar
@@ -59,11 +59,11 @@ javac.classpath=\
     ${file.reference.commons-math3-3.3.jar}:\
     ${file.reference.jdepend-2.9.1.jar}:\
     ${file.reference.joptimizer.jar}:\
-    ${file.reference.junit-3.8.1.jar}:\
     ${file.reference.log4j-1.2.14.jar}:\
     ${file.reference.ojalgo-35.0.jar}:\
     ${file.reference.xml-apis-1.0.b2.jar}:\
-    ${file.reference.junit-4.12.jar}
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.hamcrest-all-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +73,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.junit-4.12.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -105,3 +106,4 @@ run.test.classpath=\
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
+test.tests.dir=tests
