--- a/test/3K75.3LQC/DEE.3LQC.b.cfg
+++ b/test/3K75.3LQC/DEE.3LQC.b.cfg
@@ -12,7 +12,7 @@ stericE 100000000000.0
 pairSt 100000000000.0
 useEref true
 addWT true
-addWTRots true
+addWTRots false
 resAllowed0_0 
 resAllowed0_1 
 resAllowed0_2 
