--- a/test/3K75.3LQC/DEE.3LQC.ub.cfg
+++ b/test/3K75.3LQC/DEE.3LQC.ub.cfg
@@ -12,7 +12,7 @@ stericE 100000000000.0
 pairSt 100000000000.0
 useEref true
 addWT true
-addWTRots true
+addWTRots false
 resAllowed0_0 ILE LEU MET PHE TRP TYR VAL
 resAllowed0_1 ASP GLU
 resAllowed0_2 ILE LEU MET PHE TRP TYR VAL
