Added doFullOutput option for ConfInfo command
Will output full conf information (conf file, etc.) instead of just
energy

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -40,6 +40,8 @@ RamaProFile rama500-pro.data
 RamaGenFile rama500-general.data
 RamaPreProFile rama500-prepro.data
 
+DoFullOutput false
+
 %DEEPer
 doPerturbations false
 selectPerturbations true
