Added deleted residues warning log
If you don’t want it just set “DeletedResWarningLog None” in one of the
config files.  The warnings still go to stdout, as in the past (in
addition to the new warning log).

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -41,6 +41,7 @@ RamaGenFile rama500-general.data
 RamaPreProFile rama500-prepro.data
 
 DoFullOutput false
+DeletedResWarningLog deleted_res.txt
 
 %DEEPer
 doPerturbations false
