--- a/nbproject/private/configs/1CC8.properties
+++ b/nbproject/private/configs/1CC8.properties
@@ -1,2 +1,2 @@
-application.args=-c KStar.cfg ConfInfo System.cfg DEE.cfg
+application.args=-c KStar.cfg findGMEC System.cfg DEE.cfg
 work.dir=/Users/mhall44/Mark/OSPREY_refactor/test/1CC8
