Updated work on new implementation of wtRots

--- a/test/VariationalKStar/TRBP/GMEC/DEE.cfg
+++ b/test/VariationalKStar/TRBP/GMEC/DEE.cfg
@@ -4,9 +4,12 @@ addWTrots true
 addWT true
 useDunbrackRotamers false
 stericThresh 100
-rotfile LovellRotamerOH.dat
+rotfile LovellRotamer.dat
 algoption 1
 numMPLPIters 0
+outputGMECStruct true
+outputpdbs true
+numconfstooutput 1
 resAllowed0_0 ASN
 resAllowed0_1 ASN
 resAllowed0_2 ASN
