added dihedral flexibility as a parameter

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -42,6 +42,7 @@ DoFullOutput false
 DeletedResWarningLog deleted_res.txt
 
 %KSTAR
+dihedFlexInterval 9
 useMaxKSConfs false
 maxKSconfs 200000
 kStarPFuncStabThresh 0
