--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -41,10 +41,11 @@ RamaPreProFile rama500-prepro.data
 DoFullOutput false
 DeletedResWarningLog deleted_res.txt
 
+
 %KSTAR
 dihedFlexInterval 9
-useMaxKSConfs false
-maxKSconfs 200000
+kStarUseMaxKSConfs false
+kStarMaxKSconfs 200000
 kStarPFuncStabThresh 0
 kStarPFuncMethod Traditional
 kStarPFuncThreads 16
@@ -54,19 +55,21 @@ kStarDoCheckpoint false
 kStarCheckpointInterval 100000
 ematDir emat
 deleteEmatDir false
-pFuncSuppressOutput false
-pFunctHotMethod none
-pFuncHot_0 0
-pFuncHot_1 0
-pFuncHotNumRes 3
-pFuncHotBoundPct 0.05
-pFuncHotTopRotsPct 0.33
+kStarPFuncSuppressOutput false
+kStarPFunctHotMethod none
+kStarPFuncHot_0 0
+kStarPFuncHot_1 0
+kStarPFuncHotNumRes 3
+kStarPFuncHotBoundPct 0.05
+kStarPFuncHotTopRotsPct 0.33
+
 
 %DEEPer
 doPerturbations false
 selectPerturbations true
 startingPerturbationFile none
 onlyStartingPerturbations false
+minimizePerturbations false
 maxShearParam 2.5
 maxBackrubParam 2.5
 selectLCAs false
