tweaked sublinear termination condition

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -44,6 +44,7 @@ DeletedResWarningLog deleted_res.txt
 
 %KSTAR
 dihedFlexInterval 9
+kStarPhase2Method slow
 kStarUseMaxKSConfs false
 kStarMaxKSconfs 200000
 kStarPFuncStabThresh 0
