fixed parameters in tests

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -48,9 +48,9 @@ kStarPhase2Method slow
 kStarUseMaxKSConfs false
 kStarMaxKSconfs 200000
 kStarPFuncStabThresh 0
-kStarPFuncMethod Traditional
-kStarPFuncThreads 16
-numThreads 16
+kStarPFuncMethod parallel2
+kStarPFuncThreads 4
+numThreads 4
 kStarMethod linear
 kStarDoCheckpoint false
 kStarCheckpointInterval 100000
