added a new bound (max interface), fixed a bug with the unbound ummutable partition function

--- a/test/VariationalKStar/SublinearKStar/4HEM/Smaller/DEE.cfg
+++ b/test/VariationalKStar/SublinearKStar/4HEM/Smaller/DEE.cfg
@@ -4,15 +4,15 @@ addWT true
 useDunbrackRotamers false
 stericThresh 100
 algoption 3
-resAllowed0_0 ASN TRP LEU LYS PHE
-resAllowed0_1 SER TRP LEU LYS PHE
-resAllowed0_2 ILE TRP LEU LYS PHE
-resAllowed0_3 SER
-resAllowed0_4 GLU
-resAllowed0_5 SER
-resAllowed0_6 VAL
-resAllowed0_7 THR
-resAllowed0_8 ARG
+resAllowed0_0 ASN TRP PHE ARG
+resAllowed0_1 SER TRP PHE ARG
+resAllowed0_2 ILE TRP PHE ARG
+resAllowed0_3 SER TRP PHE ARG
+resAllowed0_4 GLU TRP PHE ARG
+resAllowed0_5 SER TRP PHE ARG
+resAllowed0_6 VAL TRP PHE ARG
+resAllowed0_7 THR TRP PHE ARG
+resAllowed0_8 ARG TRP PHE ARG
 resAllowed1_0 GLU
 resAllowed1_1 PHE
 resAllowed1_2 TYR
