--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -43,19 +43,25 @@ DeletedResWarningLog deleted_res.txt
 
 
 %KSTAR
+epsilon 0.03
 dihedFlexInterval 9
+numThreads 4
+kStarPFuncThreads 4
+kStarEmatDir emat
+kStarDeleteEmatDir false
+kStarOutputDir runName
+kStarSkipWTCalc true
+kStarSaveTopConfsAsPDB false
+kStarNumTopConfsToSave 10
 kStarPhase2Method slow
 kStarUseMaxKSConfs false
 kStarMaxKSconfs 200000
 kStarPFuncStabThresh 0
 kStarPFuncMethod parallel2
-kStarPFuncThreads 4
-numThreads 4
 kStarMethod linear
+kStarCheckPointDir checkpoint
 kStarDoCheckpoint false
 kStarCheckpointInterval 100000
-ematDir emat
-deleteEmatDir false
 kStarPFuncSuppressOutput false
 kStarPFunctHotMethod none
 kStarPFuncHot_0 0
