do not skip wt k* calc by default!

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -50,7 +50,7 @@ kStarPFuncThreads 4
 kStarEmatDir emat
 kStarDeleteEmatDir false
 kStarOutputDir runName
-kStarSkipWTCalc true
+kStarSkipWTCalc false
 kStarSaveTopConfsAsPDB false
 kStarNumTopConfsToSave 10
 kStarPhase2Method slow
