default output dir to working dir

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -49,7 +49,7 @@ numThreads 4
 kStarPFuncThreads 4
 kStarEmatDir emat
 kStarDeleteEmatDir false
-kStarOutputDir runName
+kStarOutputDir .
 kStarSkipWTCalc false
 kStarSaveTopConfsAsPDB false
 kStarNumTopConfsToSave 10
