--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -57,7 +57,7 @@ kStarPhase2Method slow
 kStarUseMaxKSConfs false
 kStarMaxKSconfs 200000
 kStarPFuncStabThresh 0
-kStarPFuncMethod parallel2
+kStarPFuncMethod traditional
 kStarMethod linear
 kStarCheckPointDir checkpoint
 kStarDoCheckpoint false
