--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -100,6 +100,11 @@ EPICGOALRESID 0.0001
 USESAPE true
 EPICUSEPC true
 MINPARTIALCONFS true
+EPICQUADONLY false
+
+%LUTE
+LUTEGOALRESID 0.01
+LUTERELWT false
 
 %MPLP
 NumMPLPIters 0
