EPIC, LUTE, BAR tweaks
Fixed linear q-function numerical issue, added a few command-line
options, fixed A* tree generation for EPIC w/o LUTE

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -40,6 +40,9 @@ RamaPreProFile rama500-prepro.data
 
 DoFullOutput false
 DeletedResWarningLog deleted_res.txt
+UseParallelEFunc true
+CCDEConvTol 0.001
+CCDNumIter 30
 
 
 %KSTAR
@@ -105,6 +108,7 @@ EPICQUADONLY false
 %LUTE
 LUTEGOALRESID 0.01
 LUTERELWT false
+LUTETHRESHWT false
 
 %MPLP
 NumMPLPIters 0
