--- a/.classpath
+++ b/.classpath
@@ -22,6 +22,9 @@
 	<classpathentry kind="lib" path="lib/jocl-2.3.2-natives-linux-amd64.jar"/>
 	<classpathentry kind="lib" path="lib/jocl-2.3.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-collections4-4.1.jar"/>
+	<classpathentry kind="lib" path="lib/jcuda-0.8.0RC.jar"/>
+	<classpathentry kind="lib" path="lib/jcuda-natives-0.8.0RC-linux-x86_64.jar"/>
+	<classpathentry kind="lib" path="lib/jcuda-natives-0.8.0RC-windows-x86_64.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/junit-4.12.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
