a first stab at writing the MRF code and some stubs for message passing algorithms

--- a/nbproject/configs/testKStar.properties
+++ b/nbproject/configs/testKStar.properties
@@ -1,1 +1,1 @@
-main.class=edu.duke.cs.osprey.tests.variationalkstar.continuous.RKHSFunctionTests
+main.class=edu.duke.cs.osprey.tests.variationalkstar.continuous.RKHSFunctionTest
