--- a/nbproject/private/configs/testKStar.properties
+++ b/nbproject/private/configs/testKStar.properties
@@ -1,2 +1,2 @@
-application.args=
+application.args=-Djava.library.path="${workspace_loc:project}\\lib;${env_var:PATH}"
 work.dir=/home/aditya/OSPREY
