--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,4 @@
-#Sun Sep 11 13:23:10 EDT 2016
+#Thu Dec 15 13:29:18 EST 2016
 javadoc.splitindex=true
 test.test.dir=test
 build.classes.excludes=**/*.java,**/*.form
@@ -6,9 +6,7 @@ javadoc.author=false
 build.sysclasspath=ignore
 javac.target=1.8
 build.generated.dir=${build.dir}/generated
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
+run.classpath=${javac.classpath}\:${build.classes.dir}
 file.reference.commons-beanutils-1.6.jar=lib/commons-beanutils-1.6.jar
 debug.test.classpath=${run.test.classpath}
 file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
@@ -34,9 +32,7 @@ javac.source=1.8
 run.jvmargs=
 javac.test.processorpath=${javac.test.classpath}
 dist.archive.excludes=
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.notree=false
 dist.jar=${dist.dir}/OSPREY_refactor_v2.jar
@@ -51,26 +47,7 @@ src.src.dir=src
 javadoc.additionalparam=
 file.reference.log4j-1.2.14.jar=lib/log4j-1.2.14.jar
 file.reference.joptimizer.jar=lib/joptimizer.jar
-javac.classpath=\
-    ${file.reference.architecture-rules-3.0.0-M1.jar}:\
-    ${file.reference.colt-1.2.0.jar}:\
-    ${file.reference.commons-beanutils-1.6.jar}:\
-    ${file.reference.commons-collections-2.1.jar}:\
-    ${file.reference.commons-digester-1.6.jar}:\
-    ${file.reference.commons-io-1.4.jar}:\
-    ${file.reference.commons-lang-2.5.jar}:\
-    ${file.reference.commons-logging-1.1.1.jar}:\
-    ${file.reference.commons-math3-3.0.jar}:\
-    ${file.reference.gurobi.jar}:\
-    ${file.reference.jdepend-2.9.1.jar}:\
-    ${file.reference.joptimizer.jar}:\
-    ${file.reference.junit-3.8.1.jar}:\
-    ${file.reference.log4j-1.2.14.jar}:\
-    ${file.reference.xml-apis-1.0.b2.jar}:\
-    ${file.reference.lib-CopyLibs}:\
-    ${file.reference.commons-math3-3.3.jar}:\
-    ${file.reference.junit-4.12.jar}:\
-    ${file.reference.Jama-1.0.3.jar}
+javac.classpath=${file.reference.architecture-rules-3.0.0-M1.jar}\:${file.reference.colt-1.2.0.jar}\:${file.reference.commons-beanutils-1.6.jar}\:${file.reference.commons-collections-2.1.jar}\:${file.reference.commons-digester-1.6.jar}\:${file.reference.commons-io-1.4.jar}\:${file.reference.commons-lang-2.5.jar}\:${file.reference.commons-logging-1.1.1.jar}\:${file.reference.commons-math3-3.0.jar}\:${file.reference.gurobi.jar}\:${file.reference.jdepend-2.9.1.jar}\:${file.reference.joptimizer.jar}\:${file.reference.junit-3.8.1.jar}\:${file.reference.log4j-1.2.14.jar}\:${file.reference.xml-apis-1.0.b2.jar}\:${file.reference.lib-CopyLibs}\:${file.reference.commons-math3-3.3.jar}\:${file.reference.junit-4.12.jar}\:${file.reference.Jama-1.0.3.jar}\:${file.reference.clp-java-1.16.10-full.jar}
 javadoc.noindex=false
 file.reference.jdepend-2.9.1.jar=lib/jdepend-2.9.1.jar
 file.reference.architecture-rules-3.0.0-M1.jar=lib/architecture-rules-3.0.0-M1.jar
@@ -78,6 +55,7 @@ annotation.processing.enabled.in.editor=false
 javadoc.private=false
 javadoc.encoding=${source.encoding}
 build.test.classes.dir=${build.dir}/test/classes
+file.reference.clp-java-1.16.10-full.jar=lib/clp-java-1.16.10-full.jar
 file.reference.lib-CopyLibs=lib/CopyLibs/
 javac.compilerargs=
 source.encoding=UTF-8
@@ -88,19 +66,14 @@ excludes=
 application.title=OSPREY_refactor_v2
 file.reference.commons-io-1.4.jar=lib/commons-io-1.4.jar
 file.reference.xml-apis-1.0.b2.jar=lib/xml-apis-1.0.b2.jar
-javac.processorpath=\
-    ${javac.classpath}
+javac.processorpath=${javac.classpath}
 build.test.results.dir=${build.dir}/test/results
 endorsed.classpath=
 javadoc.use=true
 file.reference.junit-4.12.jar=lib/junit-4.12.jar
 javadoc.nonavbar=false
 javadoc.windowtitle=
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
 file.reference.commons-lang-2.5.jar=lib/commons-lang-2.5.jar
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 debug.classpath=${run.classpath}
