Build dir for sublinear runs, verbose TRBP off

--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,8 @@
 	<classpathentry kind="lib" path="lib/ojalgo-35.0.jar"/>
 	<classpathentry kind="lib" path="lib/xml-apis-1.0.b2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/gurobi.jar"/>
+	<classpathentry kind="lib" path="lib/Jama-1.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/junit-4.12.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
