Added mean-field approximation calculations and rebased from Hunter's branch onto master

--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -1,5 +1,6 @@
 libs.CopyLibs.classpath=\
-    ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
+    ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar:\
+    ${base}/junit-4.12.jar
 libs.CopyLibs.displayName=CopyLibs Task
 libs.CopyLibs.prop-version=2.0
 libs.hamcrest.classpath=\
@@ -7,6 +8,7 @@ libs.hamcrest.classpath=\
 libs.hamcrest.displayName=Hamcrest 1.3
 libs.hamcrest.prop-maven-dependencies=org.hamcrest:hamcrest-core:1.3:jar
 libs.junit_4.classpath=\
+    ${base}/junit_4-2:\
     ${base}/junit_4/junit-4.12.jar
 libs.junit_4.displayName=JUnit 4.12
 libs.junit_4.javadoc=\
