fix paths to examples files

--- a/examples/1CC8.deeper/DEE.cfg
+++ b/examples/1CC8.deeper/DEE.cfg
@@ -1,7 +1,7 @@
 % Mutation Parameter File
 % pruningE  (MinDEE)
 %
-runName test/1CC8.deeper/1CC8
+runName examples/1CC8.deeper/1CC8
 algOption 3
 UseTriples true
 imindee true
