implement simple PDB loading without rotamers
ie, create the ability to load an arbitrary PDB file without needing to
have a rotamer library present (and do template assignment)

also use enums for secondary structure values instead of ints

also fix maybe a bug in PeriodicTable with element name case recognition

first line of the sketch python script is implemented! We can load a PDB
yay! =)

--- a/examples/4NPD/DEE.cfg
+++ b/examples/4NPD/DEE.cfg
@@ -12,4 +12,4 @@ resAllowed0_0 Ile Ala Gly
 resAllowed0_1 Ser Ala Gly
 resAllowed0_2 Met Ser Ala Gly
 OutputGMECStruct true
-useEllipses true
+useEllipses false
