Fixed SCMF lower bound calculation

--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -9,7 +9,7 @@ libs.hamcrest.displayName=Hamcrest 1.3
 libs.hamcrest.prop-maven-dependencies=org.hamcrest:hamcrest-core:1.3:jar
 libs.junit_4.classpath=\
     ${base}/junit_4-2:\
-    ${base}/junit_4/junit-4.12.jar
+    ${base}/junit-4.12.jar
 libs.junit_4.displayName=JUnit 4.12
 libs.junit_4.javadoc=\
     ${base}/junit_4/junit-4.12-javadoc.jar
