--- a/nbproject/configs/testKStar.properties
+++ b/nbproject/configs/testKStar.properties
@@ -1,1 +1,1 @@
-main.class=edu.duke.cs.osprey.tests.variationalkstar.continuous.RKHSFunctionTest
+main.class=edu.duke.cs.osprey.partitionfunctionbounds.continuous.CMRF
