--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -100,6 +100,14 @@ COMETSIVal NaN
 OutputStateGMECStructs false
 
 
+%MULTISTATEKSTAR
+MultStateAlgOption exhaustive
+IsReportingProgress false
+NumStateConstr -1
+SaveTopConfsAsPDB false
+NumTopConfsToSave 10
+
+
 %EPIC
 EPICTHRESH1 10
 EPICTHRESH2 25
