--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -105,6 +105,7 @@ MultStateAlgOption exhaustive
 IsReportingProgress false
 NumStateConstr -1
 NumTopConfsToSave 0
+UbStateRotTrans* false
 Resume false
 EmatDir emat
 
