--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -125,6 +125,7 @@ LUTETHRESHWT false
 
 %MPLP
 NumMPLPIters 0
+MPLPAlg edge
 MPLPConvergenceThreshold 0.0001
 
 %PartCR
@@ -141,6 +142,7 @@ NumThreads 1
 %these are self-explanatory, right?
 %the future python-land will eventually give us better tools for documenting these settings
 EmatThreads 1
+AStarThreads 1
 MinimizationThreads 1
 MinimizationGpus 0
 MinimizationStreamsPerGpu 1
