fixed TRBP edge domain bug

--- a/nbproject/private/configs/testKStar.properties
+++ b/nbproject/private/configs/testKStar.properties
@@ -1,2 +1,1 @@
-application.args=-Djava.library.path="${workspace_loc:project}\\lib;${env_var:PATH}"
-work.dir=/home/aditya/OSPREY
+work.dir=/home/aditya/OSPREY/test/4LAJ.cmrf/cfg
