--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-application.args=-c KStar.cfg doGumbel DEE.cfg System.cfg
+application.args=-c cfgKStar.txt doCMRF cfgSystem.txt cfgMutSearch.txt
 compile.on.save=true
 do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/aditya/.netbeans/8.1/build.properties
-work.dir=.
+user.properties.file=/home/home1/am439/.netbeans/8.1/build.properties
+work.dir=/home/aditya/OSPREY/test/4LAJ.cmrf/cfg
