--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -70,7 +70,7 @@ file.reference.commons-digester-1.6.jar=lib/commons-digester-1.6.jar
 file.reference.OSPREY_refactor_v2-src=src
 platform.active=JDK_1.8
 annotation.processing.enabled=true
-main.class=edu.duke.cs.osprey.partitionfunctionbounds.continuous.CMRF
+main.class=edu.duke.cs.osprey.control.Main
 dist.javadoc.dir=${dist.dir}/javadoc
 src.src.dir=src
 javadoc.additionalparam=
