preliminary residue ordering code

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -101,7 +101,8 @@ OutputStateGMECStructs false
 
 
 %MULTISTATEKSTAR
-MultStateAlgOption exhaustive
+MultStateAlgOption Exhaustive
+ResidueOrder StaticSequential
 IsReportingProgress false
 NumStateConstr -1
 NumTopConfsToSave 0
