Added LBP iterations before TRBP to improve logZ upper bounds

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,5 +4,5 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/aditya/.netbeans/8.1/build.properties
+user.properties.file=/home/home1/am439/.netbeans/8.1/build.properties
 work.dir=/home/aditya/OSPREY/test/4LAJ.cmrf/cfg
