msk* doesn't crash. worth a commit

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -107,7 +107,7 @@ IsReportingProgress false
 NumStateConstr -1
 NumTopConfsToSave 0
 UbStateRotTrans* false
-Resume false
+Resume true
 EmatDir emat
 
 
