type of score to compute

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -107,6 +107,7 @@ IsReportingProgress false
 NumStateConstr -1
 NumTopConfsToSave 0
 UbStateRotTrans* false
+ScoreType final
 Resume true
 EmatDir emat
 
