specify minimized, discrete, upper/lower bound for exhaustive

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -104,7 +104,8 @@ OutputStateGMECStructs false
 MultStateAlgOption Exhaustive
 ResidueOrder StaticSequential
 IsReportingProgress false
-NumStateConstr -1
+NumStateConstr 0
+NumUbConstr 0
 NumTopConfsToSave 0
 UbStateRotTrans* false
 ScoreType final
