--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -2,6 +2,7 @@ Ew 0
 imindee false
 Ival 5
 doMinimize false
+NumConfsToScore 1
 UseTupExp false
 UseEPIC false
 CheckApproxE true
@@ -105,9 +106,8 @@ MultStateAlgOption Exhaustive
 ResidueOrder StaticSequential
 IsReportingProgress false
 NumStateConstr 0
-NumUbConstr 0
+NumStrandConstr 0
 NumTopConfsToSave 0
-UbStateRotTrans* false
 ScoreType final
 Resume true
 EmatDir emat
