better keyword for pruning confs in partial sequences

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -112,7 +112,7 @@ ScoreType final
 Resume true
 EmatDir emat
 SynchronizedMinimization false
-PrunePartialConfs false
+PrunePartialSeqConfs false
 
 
 %EPIC
