--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -107,6 +107,7 @@ ResidueOrder StaticSequential
 IsReportingProgress false
 NumStateConstr 0
 NumStrandConstr 0
+MaxNumConfs 2147483647
 NumTopConfsToSave 0
 ScoreType final
 Resume true
