bug fixes for mingmec support

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -6,6 +6,7 @@ UseTupExp false
 UseEPIC false
 CheckApproxE true
 OUTPUTGMECSTRUCT false
+MaxNumGMECConfs 1
 useEllipses false
 UsePoissonBoltzmann false
 ADDWT true
