support game ratio computation for discrete case

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -114,7 +114,7 @@ Resume true
 EmatDir emat
 SynchronizedMinimization false
 PrunePartialSeqConfs false
-ComputeMinGMECRatio false
+ComputeGMECRatio false
 Timeout -1
 
 
