added new keywords for maxnumconfs and timeout

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -107,6 +107,7 @@ ResidueOrder StaticSequential
 IsReportingProgress false
 NumStateConstr 0
 NumStrandConstr 0
+ComputeMaxNumConfs false
 MaxNumConfs 2147483647
 NumTopConfsToSave 0
 ScoreType final
@@ -115,7 +116,8 @@ EmatDir emat
 SynchronizedMinimization false
 PrunePartialSeqConfs false
 ComputeGMECRatio false
-Timeout -1
+TimeoutHRS 2147483647
+PruningTimeoutHRS 2147483647
 
 
 %EPIC
