--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -104,6 +104,8 @@ OutputStateGMECStructs false
 %MULTISTATEKSTAR
 MultStateAlgOption Exhaustive
 ResidueOrder StaticSequential
+SublinearAtLeafNodes true
+PrunePartialSeqConfs false
 IsReportingProgress false
 NumStateConstr 0
 NumStrandConstr 0
@@ -114,7 +116,6 @@ ScoreType final
 Resume true
 EmatDir emat
 SynchronizedMinimization false
-PrunePartialSeqConfs false
 ComputeGMECRatio false
 TimeoutHRS 2147483647
 PruningTimeoutHRS 2147483647
