--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -103,7 +103,7 @@ OutputStateGMECStructs false
 
 %MULTISTATEKSTAR
 MultStateAlgOption Exhaustive
-ResidueOrder StaticSequential
+ResidueOrder Sequential
 SublinearAtLeafNodes true
 PrunePartialSeqConfs false
 IsReportingProgress false
