new keyword to compute gmec as first conf in partition function

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -117,6 +117,7 @@ Resume true
 EmatDir emat
 SynchronizedMinimization false
 ComputeGMECRatio false
+ComputeGMEC false
 TimeoutHRS 2147483647
 PruningTimeoutHRS 2147483647
 
