--- a/OSPREY_refactor_master/nbproject/project.properties
+++ b/OSPREY_refactor_master/nbproject/project.properties
@@ -118,7 +118,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=edu.duke.cs.osprey.control.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
