added parameter for top cons dir

--- a/dataFiles/defaults.cfg
+++ b/dataFiles/defaults.cfg
@@ -111,6 +111,7 @@ NumStateConstr 0
 NumStrandConstr 0
 ComputeMaxNumConfs false
 MaxNumConfs 2147483647
+TopConfsDir topConfs
 NumTopConfsToSave 0
 ScoreType final
 Resume true
