--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ bin
 /OSPREY_refactor_master/build/
 /OSPREY_refactor_master/dist/
 *.dat
+
+sequences-exhaustive.1-seq.txt
+
+sequences-sublinear.1-seq.txt
