update probe template atom names
CYS HG atoms are apparently named inconsistently in osprey's residue templates

--- a/resources/config/probe.cfg
+++ b/resources/config/probe.cfg
@@ -545,7 +545,7 @@ CYS-Nterm
 	HB2  1.17
 	HB3  1.17
 	SG   1.80 acceptor
-	HG   1.00 donor
+	HSG  1.00 donor
 	C    1.65
 	O    1.40 acceptor
 
@@ -558,7 +558,7 @@ CYS-Cterm
 	HB2  1.17
 	HB3  1.17
 	SG   1.80 acceptor
-	HG   1.00 donor
+	HSG  1.00 donor
 	C    1.65
 	O    1.40 -acceptor
 	OXT  1.40 -acceptor
