--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ branches:
     only:
         - master
 
+# only use the v8 JDK, otherwise the JavaFX stuff doesn't compile
+# (because they stopped shipping JavaFX in the JVM in v9+)
+jdk:
+    - openjdk8
+
 # travis docs say we need this to prevent issues with gradle builds
 # https://docs.travis-ci.com/user/languages/java/
 before_cache:
