--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,4 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 *.emat
+.idea
