Add comments, clean up CommandPartitionFunction
Remove dead parameters and code.

--- a/src/test/resources/ke07-apo.yaml
+++ b/src/test/resources/ke07-apo.yaml
@@ -3,7 +3,7 @@ osprey_version: Osprey 3.0
 design_name: Apo KE07 Design
 residue_configurations:
 - !ResidueModifier
-  mutable:
+  mutability:
   - !AminoAcid Ala
   flexibility: !Flexibility
     is_flexible: true
@@ -13,7 +13,7 @@ residue_configurations:
     res_num: 10
     aa_type: !AminoAcid Leu
 - !ResidueModifier
-  mutable:
+  mutability:
   - !AminoAcid Ala
   flexibility: !Flexibility
     is_flexible: true
@@ -23,7 +23,7 @@ residue_configurations:
     res_num: 11
     aa_type: !AminoAcid Ile
 - !ResidueModifier
-  mutable: []
+  mutability: []
   flexibility: !Flexibility
     is_flexible: true
     include_structure_rotamer: true
@@ -32,7 +32,7 @@ residue_configurations:
     res_num: 12
     aa_type: !AminoAcid Val
 - !ResidueModifier
-  mutable:
+  mutability:
   - !AminoAcid Ala
   flexibility: !Flexibility
     is_flexible: true
