--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.9'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.9.9'
     implementation 'com.beust:jcommander:1.72'
+    implementation 'org.tomlj:tomlj:1.0.0'
 
     javafx {
         version = "11.0.1"
