--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ repositories {
     mavenCentral()
 }
 
+def autoValueVersion = 1.7
+
 dependencies {
     implementation 'org.apache.commons:commons-collections4:4.3'
     implementation 'org.apache.commons:commons-math3:3.6.1'
@@ -35,6 +37,8 @@ dependencies {
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.9.9'
     implementation 'com.beust:jcommander:1.72'
     implementation 'org.tomlj:tomlj:1.0.0'
+    compile "com.google.auto.value:auto-value-annotations:${autoValueVersion}"
+    annotationProcessor "com.google.auto.value:auto-value:${autoValueVersion}"
 
     javafx {
         version = "11.0.1"
